# ethbangkok-team2

akave/: README.md  launch_akave.sh
backend/: .gitignore  Cargo.toml
backend/express/: app.ts  index.html  package.json
backend/indexer/: filecoin_blog2024-11-17T01:22:30.701Z.json  filecoinfoundation.medium.com2024-11-16T12:57:11.863Z.json  filecoinfoundation.medium.com2024-11-16T12:58:04.572Z.json  medium.com2024-11-16T11:24:45.864Z.json  package.json  tsconfig.json
backend/indexer/src/: akaveClient.ts  daClient.ts  daID.ts  filecoinBlog.ts  filecoinfoundation.medium.com2024-11-16T21:11:21.093Z.json  index.ts  rssProcessor.ts  tsconfig.json
backend/indexer/src/avail/: daClient.ts  daPusher.ts  daReveal.ts  results.json
backend/sign/: attest.ts  attestation_info.json  package.json  queryAttest.ts  signClient.ts
backend/src/: main.rs
backend/tlsn-edited/: Cargo.toml
backend/tlsn-edited/crates/json/: Cargo.toml  output.json  prove.rs
oro/: app.json  config.ts  index.d.ts  package-lock.json  package.json  store.ts
oro/app/: _layout.tsx  index.tsx
oro/app/detail/: index.tsx
oro/assets/images/: medium.com2024_11_16T04_33_17.412Z.json
oro/client/: akave.ts
oro/components/core/: index.ts
oro/components/core/SafeAreaView/: index.tsx
oro/components/ui/NewsBox/: index.tsx
oro/constants/: Const.ts
oro/features/news/: newsSlice.ts
oro/utils/: Format.ts  News.ts  Spacing.ts  akave.ts  index.ts
