[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = "0.14"
hyper-util = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

tlsn-common = "0.1"
tlsn-core = "0.1"
tlsn-formats = "0.1"
tlsn-prover = "0.1"

